--- a/public/css/app.css
+++ b/public/css/app.css
@@ -45,7 +45,7 @@ body{
 
 #content{
     min-height: 80vh;
-    width: 100vw;
+    width: 100%;
 }
 
 .row{
@@ -134,7 +134,6 @@ body{
 }
 
 .box-shadow{
-    background-color: var(--white);
     box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.2);
 }
 
