Inicio do painel

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -48,6 +48,11 @@ body{
     width: 100%;
 }
 
+#content-panel{
+    min-height: 80vh;
+    width: 100%;
+}
+
 .row{
     display: flex;
     flex-wrap: wrap;
