--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,3 +1,45 @@
+#principal{
+    min-height: 80vh;
+}
+
+button{
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: var(--white);
+    padding: 5px 8px;
+    background-color: var(--red);
+    border-radius: 3px;
+    transition: all .2s;
+    cursor: pointer;
+}
+
+button:hover{
+    box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.2);
+}
+
+form{
+    background-color: var(--gray);
+    border-radius: 8px;
+}
+
+label{
+    font-size: 1.4rem;
+    color: var(--black);
+}
+
 input{
-    border: 1px solid red;
+    text-align: start;
+    background-color: var(--white);
+    width: 45%;
+    height: 2rem;
+    border-radius: 4px;
+    margin-bottom: .8rem;
+    transition: all .5s;
+}
+input:focus{
+    width: 60%;
+}
+
+input:focus-visible{
+    outline: 1px solid var(--black);
 }
