--- a/public/css/post-panel.css
+++ b/public/css/post-panel.css
@@ -25,6 +25,16 @@ button:hover{
     box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.2);
 }
 
+#image{
+    width: auto;
+    border: none;
+    margin: 1rem;
+}
+
+#image:focus-within{
+    outline: none;
+}
+
 input{
     border: .5px solid var(--gray);
     width: 75%;
