--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,16 +1,10 @@
 footer{
-    height: 10vh;
-    width: 100%;
     background-color: var(--very-dark-gray);
 }
 
 footer ul{
-    width: 100%;
     padding: .3rem 1.2rem;
-    height: 10vh;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+    min-height: 10vh;
     background-color: var(--very-dark-gray);
 }
 
@@ -41,7 +35,7 @@ footer ul li a:hover{
 
 @media screen and (min-width: 1000px){
     footer ul li{
-        min-width: 7.5rem;
+        min-width: 7rem;
     }
     
     footer ul li div{
