--- a/public/css/post-panel.css
+++ b/public/css/post-panel.css
@@ -25,6 +25,21 @@ button:hover{
     box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.2);
 }
 
+#div-tags{
+    width: 75%;
+    height: auto;
+    overflow-wrap: normal;
+    overflow-x: hidden;
+    overflow-y: auto;
+    border: .5px solid var(--gray);
+    border-radius: 4px;
+    background-color: var(--white);
+}
+
+#div-tags label{
+    font-size: 1rem;
+}
+
 #image{
     width: auto;
     border: none;
@@ -35,7 +50,7 @@ button:hover{
     outline: none;
 }
 
-input{
+input[type=text]{
     border: .5px solid var(--gray);
     width: 75%;
     height: 2rem;
@@ -47,11 +62,11 @@ input{
     font-weight: 600;
 }
 
-input:focus{
+input[type=text]:focus{
     width: 85%;
 }
 
-input:focus-within{
+input[type=text]:focus-within{
     outline: 1px solid var(--black);
 }
 
